test/good/sets/comprehension05.px

func f(s: {Float}): Void def
    print s

f({for x in 1...2 yield x/2})
