test/bad/generators/void06.px

func f(): Void... def
    skip

print f().next()
